--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "helmet": "^3.16.0",
     "knex": "^0.16.3",
     "knex-cleaner": "^1.1.4",
